add GET method to expose endpoint to get all products with page and add logic in service